Fixed home section not centered

--- a/src/styles/component_styles/_home.scss
+++ b/src/styles/component_styles/_home.scss
@@ -5,7 +5,6 @@
     width: 100vw;
     height: calc(100vh - 1rem);
     padding-top: 1rem;
-    margin: 0;
     overflow: hidden;
 }
 
